fix(DatePicker): align the arrows & allow changing font-size from the DatePicker (#6872)

--- a/packages/wix-ui-tpa/src/components/DatePickerInput/DatePickerInput.st.css
+++ b/packages/wix-ui-tpa/src/components/DatePickerInput/DatePickerInput.st.css
@@ -44,6 +44,7 @@
     /*
         The font of the calendar month snd year caption. The font size is 16px and could not be overridden.
         @default {theme: 'Body-M', lineHeight: '24px'}
+        @fixed The font size is 16px and could not be overridden.
     */
     MonthAndYearCaptionFont: --overridable;
     /*
@@ -54,6 +55,7 @@
     /*
         The font of the calendar's weekdays section. The font size is 14px and could not be overridden.
         @default {theme: 'Body-M', lineHeight: '20px'}
+        @fixed The font size is 14px and could not be overridden.
     */
     WeekdayFont:  --overridable;
     /*
@@ -64,6 +66,7 @@
     /*
         The font of a specific date. The font size is 14px and could not be overridden.
         @default {theme: 'Body-M', lineHeight: '20px'}
+        @fixed The font size is 14px and could not be overridden.
     */
     DayFont: --overridable;
     /*
@@ -148,4 +151,12 @@
 .wsrDatePicker::calendar::month {
     width: value(calendarWidth);
     height: value(calendarHeight);
+}
+
+.wsrDatePicker::calendar::header::caption {
+    font-size: 16px;
+}
+
+.wsrDatePicker::calendar::weekday, .wsrDatePicker::calendar::day {
+    font-size: 14px;
 }
